--- a/Client/BlazorPeliculas.Client.csproj
+++ b/Client/BlazorPeliculas.Client.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Shared\BlazorPeliculas.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Implementations\" />
+  </ItemGroup>
+
 </Project>
